# banduncamp

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
banduncamp/: Album.py  Artist.py  Cover.py  Downloadable.py  Downloader.py  Page.py  Path.py  Pathable.py  README.md  Saved.py  Track.py  URL.py  Url.py  __init__.py  __main__.py  composeDownloadedAlbumsFilter.py  correctFileName.py  download.py  processInParallel.py
