[tool.poetry]
name = "banduncamp"
version = "0.1.0"
description = ""
authors = ["mentalblood <neceporenkostepan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests
tqdm
mutagen

[tool.poetry.dev-dependencies]

[build-system]
requires = [
	"poetry-core>=1.0.0",
	"requests",
	"tqdm",
	"mutagen"
]
build-backend = "poetry.core.masonry.api"
