[tool.poetry]
name = "banduncamp"
version = "0.1.0"
description = "Fast tool for downloading audio from bandcamp"
authors = ["Нечепоренко Степан <neceporenkostepan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
tqdm = "^4.63.0"
mutagen = "^1.45.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
